# Works

./: 1.cpp  2.cpp  4.cpp
1/: 1.cpp
2024.10.23/: func  func.cpp  func.h  main  main.cpp
3/: 3.cpp
4/4.1/: 4.1.cpp
4/4.2/: 4.2.cpp
5/: 5.cpp  5_input  functions.cpp  functions.h  string groups  string numbers
5 klab/1/: main.cpp
5 klab/4/: main.cpp
5 klab/5/: test_find_union.cpp
5/5_example/: 5_examples.cpp  main.py
5/files/: 5_input  string groups  string numbers
5_example/: out
6/: fraction.cpp  fraction.h  main.cpp
6/6_example/: functions.cpp  functions.h  main.cpp
7/: main.cpp  studentAfterFirstSession.cpp  studentAfterFirstSession.h  studentAfterSecondSession.cpp  studentAfterSecondSession.h  students.cpp  students.h
7/files/: students
8/: stack.cpp
8-clion/: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  stack.h
8-clion/tests/: CMakeLists.txt  tests.cpp
8-clion/tests/lib/: CMakeLists.txt
8-clion/tests/lib/googletest/: CMakeLists.txt
8-stack/: calculator.cpp  calculator.h  main.cpp  otherCalculator.cpp  otherCalculator.h  stack.cpp  stack.h
Assembler/1/: 48-bit numbers.cpp  48-bit numbers.sln  48-bit numbers.vcxproj  48-bit numbers.vcxproj.filters
Assembler/2/: Arithmetics.cpp  Arithmetics.sln  Arithmetics.vcxproj
Assembler/3/: ArrayTask.cpp  ArrayTask.sln  ArrayTask.vcxproj
Assembler/4/: RealNumbers.cpp  RealNumbers.sln  RealNumbers.vcxproj
IntArithmetics/: IntArithmetics.cpp  IntArithmetics.sln  IntArithmetics.vcxproj  IntArithmetics.vcxproj.filters
another task/: header.cpp  header.h  mynotes.cpp
(+89 files in other folders)
